--- a/app/src/main/res/layout/activity_my_bill.xml
+++ b/app/src/main/res/layout/activity_my_bill.xml
@@ -29,6 +29,7 @@
             android:layout_marginLeft="@dimen/x18"
             android:layout_marginTop="@dimen/y86"
             android:text="待还款金额(元)"
+
             android:textColor="#000000"
             android:textSize="@dimen/x14"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -40,9 +41,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/x18"
             android:layout_marginTop="@dimen/y40"
-            android:text="6127.44"
             android:textColor="#000000"
-            android:textSize="55sp"
+            android:text="0.00"
+            android:textSize="@dimen/x55"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
@@ -60,26 +61,26 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_end_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/x18"
-            android:layout_marginTop="@dimen/y20"
-            android:text="截止日期"
-            android:textSize="@dimen/x12"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_balance" />
+        <!--<TextView-->
+            <!--android:id="@+id/tv_end_date"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="@dimen/x18"-->
+            <!--android:layout_marginTop="@dimen/y20"-->
+            <!--android:text="截止日期"-->
+            <!--android:textSize="@dimen/x12"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--app:layout_constraintTop_toBottomOf="@+id/tv_balance" />-->
 
-        <TextView
-            android:textColor="#4D4D4D"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/y5"
-            android:text="2019-90-90"
-            android:textSize="@dimen/x14"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_end_date"
-            app:layout_constraintTop_toBottomOf="@+id/tv_end_date" />
+        <!--<TextView-->
+            <!--android:textColor="#4D4D4D"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/y5"-->
+            <!--android:text="2019-90-90"-->
+            <!--android:textSize="@dimen/x14"-->
+            <!--app:layout_constraintLeft_toLeftOf="@+id/tv_end_date"-->
+            <!--app:layout_constraintTop_toBottomOf="@+id/tv_end_date" />-->
 
         <LinearLayout
             android:id="@+id/llyt_option"
