--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,12 +32,20 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"></View>
 
+        <View
+            android:id="@+id/v_setting"
+            android:layout_width="@dimen/x46"
+            android:layout_height="@dimen/y36"
+            android:layout_marginTop="@dimen/y26"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></View>
+
         <com.qmuiteam.qmui.widget.QMUIRadiusImageView
             android:id="@+id/iv_avatar"
             android:layout_width="@dimen/x55"
             app:qmui_is_circle="true"
             app:qmui_border_width="0dp"
-            android:src="@mipmap/icon_head_normal"
+            android:background="@mipmap/icon_head_normal"
             android:layout_height="@dimen/y55"
             android:layout_marginTop="@dimen/y23"
             app:layout_constraintLeft_toLeftOf="@+id/tv_title"
