--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -87,6 +87,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tv_version"
                 android:layout_width="@dimen/x7"
                 android:layout_height="@dimen/y13"
                 android:layout_gravity="right"
