--- a/app/src/main/res/layout/activity_my_bill.xml
+++ b/app/src/main/res/layout/activity_my_bill.xml
@@ -94,7 +94,7 @@
 
 
 
-            <TextView
+            <TextView  android:textColor="#000000"
                 android:id="@+id/tv_type1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -104,6 +104,7 @@
                 android:textSize="@dimen/x15" />
 
             <TextView
+                android:textColor="#000000"
                 android:id="@+id/tv_type2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -112,7 +113,7 @@
                 android:text="1年"
                 android:textSize="@dimen/x15" />
 
-            <TextView
+            <TextView  android:textColor="#000000"
                 android:id="@+id/tv_type3"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
