--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -78,7 +78,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:text="15903245502"
+                android:id="@+id/tv_phone"
                 android:textSize="@dimen/x15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -131,7 +131,7 @@
 
 
             <TextView
-                android:text="804427501"
+                android:id="@+id/tv_qq"
                 android:textSize="@dimen/x15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
