--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,26 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/bg_main"
         tools:context=".MainActivity">
+
+        <View
+            android:id="@+id/v_top"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/y275"
+            android:background="@mipmap/bg_main_top"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></View>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/y228"
+            android:background="@drawable/bg_main_container"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></View>
 
 
         <TextView
@@ -40,16 +58,17 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"></View>
 
+
         <com.qmuiteam.qmui.widget.QMUIRadiusImageView
             android:id="@+id/iv_avatar"
             android:layout_width="@dimen/x55"
-            app:qmui_is_circle="true"
-            app:qmui_border_width="0dp"
-            android:background="@mipmap/icon_head_normal"
             android:layout_height="@dimen/y55"
             android:layout_marginTop="@dimen/y23"
+            android:background="@mipmap/icon_head_normal"
             app:layout_constraintLeft_toLeftOf="@+id/tv_title"
-            app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_title"
+            app:qmui_border_width="0dp"
+            app:qmui_is_circle="true" />
 
         <TextView
             android:id="@+id/tv_mobile"
@@ -73,6 +92,7 @@
             android:id="@+id/clyt_info"
             android:layout_width="@dimen/x140"
             android:layout_height="@dimen/y200"
+            android:layout_marginTop="@dimen/y30"
             android:layout_marginRight="@dimen/x15"
             android:layout_marginBottom="@dimen/y30"
             app:cardCornerRadius="@dimen/x10"
@@ -85,9 +105,9 @@
 
                 <ImageView
                     android:id="@+id/icon1"
-                    android:layout_width="@dimen/x89"
-                    android:layout_height="@dimen/y74"
-                    android:layout_marginTop="@dimen/y48"
+                    android:layout_width="@dimen/x68"
+                    android:layout_height="@dimen/y64"
+                    android:layout_marginTop="@dimen/y53"
                     android:background="@mipmap/icon_info"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -96,7 +116,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/y15"
+                    android:layout_marginTop="@dimen/y23"
                     android:text="信息完善"
                     android:textColor="#1D1E2C"
                     android:textSize="@dimen/x18"
@@ -116,7 +136,9 @@
             android:layout_width="@dimen/x140"
             android:layout_height="@dimen/y200"
             android:layout_marginLeft="@dimen/x15"
+            android:layout_marginTop="@dimen/y30"
             android:layout_marginBottom="@dimen/y30"
+            app:cardCornerRadius="@dimen/x10"
             app:layout_constraintLeft_toRightOf="@+id/v_center"
             app:layout_constraintTop_toBottomOf="@+id/iv_avatar">
 
@@ -126,9 +148,9 @@
 
                 <ImageView
                     android:id="@+id/icon2"
-                    android:layout_width="@dimen/x89"
-                    android:layout_height="@dimen/y74"
-                    android:layout_marginTop="@dimen/y48"
+                    android:layout_width="@dimen/x60"
+                    android:layout_height="@dimen/y63"
+                    android:layout_marginTop="@dimen/y53"
                     android:background="@mipmap/icon_balance"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -137,7 +159,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/y15"
+                    android:layout_marginTop="@dimen/y24"
                     android:text="我的余额"
                     android:textColor="#1D1E2C"
                     android:textSize="@dimen/x18"
@@ -153,7 +175,7 @@
             android:layout_width="@dimen/x140"
             android:layout_height="@dimen/y200"
             android:layout_marginTop="@dimen/y27"
-            android:layout_marginRight="@dimen/x15"
+            android:layout_marginRight="@dimen/x15"    app:cardCornerRadius="@dimen/x10"
             app:layout_constraintRight_toLeftOf="@+id/v_center"
             app:layout_constraintTop_toBottomOf="@+id/clyt_info">
 
@@ -163,9 +185,9 @@
 
                 <ImageView
                     android:id="@+id/icon3"
-                    android:layout_width="@dimen/x74"
-                    android:layout_height="@dimen/y82"
-                    android:layout_marginTop="@dimen/y43"
+                    android:layout_width="@dimen/x66"
+                    android:layout_height="@dimen/y66"
+                    android:layout_marginTop="@dimen/y52"
                     android:background="@mipmap/icon_shenqing"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -174,7 +196,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/y15"
+                    android:layout_marginTop="@dimen/y22"
                     android:text="申请额度"
                     android:textColor="#1D1E2C"
                     android:textSize="@dimen/x18"
@@ -204,9 +226,9 @@
 
                 <ImageView
                     android:id="@+id/icon4"
-                    android:layout_width="@dimen/x93"
-                    android:layout_height="@dimen/y80"
-                    android:layout_marginTop="@dimen/y46"
+                    android:layout_width="@dimen/x79"
+                    android:layout_height="@dimen/y67"
+                    android:layout_marginTop="@dimen/y51"
                     android:background="@mipmap/icon_kefu"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -215,7 +237,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/y15"
+                    android:layout_marginTop="@dimen/y22"
                     android:text="在线客服"
                     android:textColor="#1D1E2C"
                     android:textSize="@dimen/x18"
