--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/bg_login">
+        android:background="@mipmap/bg_register">
 
         <TextView
             android:id="@+id/tv_title"
@@ -34,18 +34,30 @@
 
         <EditText
             android:id="@+id/et_mobile"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/y10"
             android:background="@null"
             android:hint="输入手机号"
             android:textColor="#1D1E2C"
             android:textSize="@dimen/x16"
+            android:layout_marginRight="@dimen/x80"
+            app:layout_constraintRight_toRightOf="parent"
             android:inputType="number"
             app:layout_constraintLeft_toLeftOf="@+id/tv_mobile_title"
             app:layout_constraintTop_toBottomOf="@+id/tv_mobile_title"></EditText>
 
         <View
+            android:id="@+id/v_clear_phone"
+            app:layout_constraintRight_toRightOf="@+id/v1"
+            app:layout_constraintTop_toTopOf="@+id/et_mobile"
+            app:layout_constraintBottom_toBottomOf="@+id/et_mobile"
+            android:background="@mipmap/icon_input_clear"
+            android:layout_width="@dimen/x18"
+            android:layout_height="@dimen/y18"></View>
+
+        <View
+            android:id="@+id/v1"
             android:layout_width="0dp"
             android:layout_height="@dimen/y1"
             android:layout_marginLeft="@dimen/x33"
@@ -116,6 +128,16 @@
             android:textSize="@dimen/x16"
             app:layout_constraintLeft_toLeftOf="@+id/tv_mobile_title"
             app:layout_constraintTop_toBottomOf="@+id/tv_pwd_title"></EditText>
+
+        <View
+            android:id="@+id/v_clear_pwd"
+            app:layout_constraintRight_toRightOf="@+id/v1"
+            app:layout_constraintTop_toTopOf="@+id/et_pwd"
+            app:layout_constraintBottom_toBottomOf="@+id/et_pwd"
+            android:background="@mipmap/icon_input_clear"
+            android:layout_width="@dimen/x18"
+            android:layout_height="@dimen/y18"></View>
+
 
         <View
             android:id="@+id/v3"
