--- a/app/src/main/res/layout/activity_repayment.xml
+++ b/app/src/main/res/layout/activity_repayment.xml
@@ -3,6 +3,7 @@
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        android:background="#f5f5f9"
         android:layout_height="match_parent">
 
         <View
@@ -50,8 +51,8 @@
             android:layout_marginTop="@dimen/y20"
             android:background="@null"
             android:inputType="numberDecimal"
-            android:text="222"
             android:textColor="#333333"
+            app:layout_constraintRight_toRightOf="@+id/lin2"
             android:textSize="@dimen/x24"
             app:layout_constraintLeft_toLeftOf="@+id/tv_title"
             app:layout_constraintTop_toBottomOf="@+id/tv_title" />
@@ -74,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/x7"
             android:layout_marginTop="@dimen/y15"
-            android:text="可提现"
+            android:text="可还"
             android:textColor="#A6A6A6"
             android:textSize="@dimen/x13"
             app:layout_constraintLeft_toLeftOf="@+id/lin2"
