--- a/app/src/main/res/layout/activity_apply_limit.xml
+++ b/app/src/main/res/layout/activity_apply_limit.xml
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/x15"
                     android:layout_marginTop="@dimen/y22"
-                    android:text="额度"
+                    android:text="额度  1000~8000元"
                     android:textColor="#888888"
                     android:textSize="@dimen/x13"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -54,7 +54,7 @@
                     android:layout_marginLeft="@dimen/x15"
                     android:layout_marginTop="@dimen/y22"
                     android:layout_marginRight="@dimen/x81"
-                    android:text="期限(月)"
+                    android:text="期限(天)"
                     android:textColor="#888888"
                     android:textSize="@dimen/x13"
                     app:layout_constraintRight_toRightOf="parent"
@@ -85,6 +85,13 @@
                     app:layout_constraintLeft_toRightOf="@+id/et_money"
                     app:layout_constraintTop_toTopOf="@+id/et_money" />
 
+                <View
+                    android:id="@+id/v_deadline"
+                    android:layout_width="@dimen/x100"
+                    android:layout_height="@dimen/y30"
+                    android:layout_marginTop="@dimen/y13"
+                    app:layout_constraintLeft_toLeftOf="@+id/tv_deadline_title"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_deadline_title" />
 
                 <TextView
                     android:id="@+id/tv_deadline"
