--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -52,16 +52,17 @@
             android:layout_height="@dimen/y50"
             android:gravity="center_vertical"
             android:orientation="horizontal"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/v_bg">
 
             <ImageView
                 android:id="@+id/icon1"
-                android:layout_width="@dimen/x25"
+                android:layout_width="@dimen/x24"
                 android:layout_height="@dimen/y24"
                 android:layout_marginLeft="@dimen/x18"
-                android:background="@mipmap/icon_mobile"
+                android:background="@mipmap/icon_kf"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -79,11 +80,11 @@
 
             <TextView
                 android:id="@+id/tv_phone"
-                android:textSize="@dimen/x15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/x36"
                 android:textColor="#808080"
+                android:textSize="@dimen/x15"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
