--- a/app/src/main/res/layout/activity_apply_limit.xml
+++ b/app/src/main/res/layout/activity_apply_limit.xml
@@ -62,6 +62,7 @@
 
 
                 <EditText
+                  android:maxLength="9"
                     android:id="@+id/et_money"
                     android:layout_width="@dimen/x100"
                     android:layout_height="wrap_content"
@@ -69,7 +70,7 @@
                     android:background="@null"
                     android:textColor="#666565"
                     android:hint="请输入"
-                    android:inputType="numberDecimal"
+                    android:inputType="number"
                     android:textSize="@dimen/x22"
                     app:layout_constraintLeft_toLeftOf="@+id/tv_limit_tip"
                     app:layout_constraintTop_toBottomOf="@+id/tv_limit_tip" />
