--- a/app/src/main/res/layout/activity_status_tip.xml
+++ b/app/src/main/res/layout/activity_status_tip.xml
@@ -54,5 +54,20 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_tip1" />
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/tv_save"
+            android:layout_width="@dimen/x311"
+            android:layout_height="@dimen/y50"
+            android:layout_marginTop="@dimen/y20"
+            android:background="@drawable/bg_login_btn"
+            android:gravity="center"
+            android:text="确认"
+            android:textColor="#fff"
+            android:textSize="@dimen/x15"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/v_bg" />
     </android.support.constraint.ConstraintLayout>
 </layout>
