--- a/app/src/main/res/layout/activity_balance.xml
+++ b/app/src/main/res/layout/activity_balance.xml
@@ -6,13 +6,13 @@
         android:layout_height="match_parent">
 
         <View
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/v_bg"
             android:layout_width="0dp"
             android:layout_height="@dimen/y250"
-            android:background="@drawable/bg_account"></View>
+            android:background="@drawable/bg_account"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></View>
 
         <include
             android:id="@+id/include_toolbar"
@@ -45,107 +45,122 @@
             app:layout_constraintLeft_toLeftOf="@+id/tv_title"
             app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/clyt1"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/y50"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/v_bg">
-
-            <ImageView
-                android:id="@+id/icon1"
-                android:layout_width="@dimen/x26"
-                android:layout_height="@dimen/y21"
-                android:layout_marginLeft="@dimen/x18"
-                android:background="@mipmap/icon_cash"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/x10"
-                android:text="我要提现"
-                android:textColor="#000000"
-                android:textSize="@dimen/x16"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/icon1"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <View
-                android:layout_width="@dimen/x7"
-                android:layout_height="@dimen/y13"
-                android:layout_gravity="right"
-                android:background="@mipmap/icon_arrow_right"
-                android:layout_marginRight="@dimen/x19"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"></View>
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="@dimen/y1"
-                android:background="#E5E5E5"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"></View>
-
-        </android.support.constraint.ConstraintLayout>
-
-        <android.support.constraint.ConstraintLayout
+        <TextView
             android:id="@+id/clyt2"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/x311"
             android:layout_height="@dimen/y50"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/y23"
+            android:background="@drawable/bg_login_btn"
+            android:gravity="center"
+            android:text="我的账单"
+            android:textColor="#fff"
+            android:textSize="@dimen/x14"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/clyt1">
+            app:layout_constraintTop_toBottomOf="@+id/v_bg" />
 
-            <ImageView
-                android:id="@+id/icon2"
-                android:layout_width="@dimen/x24"
-                android:layout_height="@dimen/y24"
-                android:layout_marginLeft="@dimen/x18"
-                android:background="@mipmap/icon_bill_balance"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/x10"
-                android:text="我的账单"
-                android:textColor="#000000"
-                android:textSize="@dimen/x16"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/icon2"
-                app:layout_constraintTop_toTopOf="parent" />
+        <!--<android.support.constraint.ConstraintLayout-->
+        <!--android:id="@+id/clyt1"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="@dimen/y50"-->
+        <!--android:gravity="center_vertical"-->
+        <!--android:orientation="horizontal"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/v_bg">-->
 
-            <View
-                android:background="@mipmap/icon_arrow_right"
-                android:layout_width="@dimen/x7"
-                android:layout_height="@dimen/y13"
-                android:layout_gravity="right"
-                android:layout_marginRight="@dimen/x19"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"></View>
+        <!--<ImageView-->
+        <!--android:id="@+id/icon1"-->
+        <!--android:layout_width="@dimen/x26"-->
+        <!--android:layout_height="@dimen/y21"-->
+        <!--android:layout_marginLeft="@dimen/x18"-->
+        <!--android:background="@mipmap/icon_cash"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent" />-->
 
-            <View
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="@dimen/x10"-->
+        <!--android:text="我要提现"-->
+        <!--android:textColor="#000000"-->
+        <!--android:textSize="@dimen/x16"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintLeft_toRightOf="@+id/icon1"-->
+        <!--app:layout_constraintTop_toTopOf="parent" />-->
 
-                android:layout_width="0dp"
-                android:layout_height="@dimen/y1"
-                android:background="#E5E5E5"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"></View>
+        <!--<View-->
+        <!--android:layout_width="@dimen/x7"-->
+        <!--android:layout_height="@dimen/y13"-->
+        <!--android:layout_gravity="right"-->
+        <!--android:background="@mipmap/icon_arrow_right"-->
+        <!--android:layout_marginRight="@dimen/x19"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"></View>-->
 
-        </android.support.constraint.ConstraintLayout>
+        <!--<View-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="@dimen/y1"-->
+        <!--android:background="#E5E5E5"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"></View>-->
+
+        <!--</android.support.constraint.ConstraintLayout>-->
+
+        <!--<android.support.constraint.ConstraintLayout-->
+        <!--android:id="@+id/clyt2"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="@dimen/y50"-->
+        <!--android:gravity="center_vertical"-->
+        <!--android:orientation="horizontal"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/clyt1">-->
+
+        <!--<ImageView-->
+        <!--android:id="@+id/icon2"-->
+        <!--android:layout_width="@dimen/x24"-->
+        <!--android:layout_height="@dimen/y24"-->
+        <!--android:layout_marginLeft="@dimen/x18"-->
+        <!--android:background="@mipmap/icon_bill_balance"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="@dimen/x10"-->
+        <!--android:text="我的账单"-->
+        <!--android:textColor="#000000"-->
+        <!--android:textSize="@dimen/x16"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintLeft_toRightOf="@+id/icon2"-->
+        <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+        <!--<View-->
+        <!--android:background="@mipmap/icon_arrow_right"-->
+        <!--android:layout_width="@dimen/x7"-->
+        <!--android:layout_height="@dimen/y13"-->
+        <!--android:layout_gravity="right"-->
+        <!--android:layout_marginRight="@dimen/x19"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"></View>-->
+
+        <!--<View-->
+
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="@dimen/y1"-->
+        <!--android:background="#E5E5E5"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"></View>-->
+
+        <!--</android.support.constraint.ConstraintLayout>-->
     </android.support.constraint.ConstraintLayout>
 </layout>
